<resources>
    <string name="app_name">Vivliothiki</string>

    <!-- Strings related to drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_books">Books</string>
    <string name="nav_users">Users</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_support">Support</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">Contact us</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>


    <!-- Strings related to login and signin-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="family_name">Family name</string>
    <string name="year">Year</string>
    <string name="field">field</string>
    <string name="action_sign_up">SIGNUP</string>
    <string name="action_log_in">LOGIN</string>
    <string name="logout">Log out</string>

    <!-- Strings related to rating dialog -->
    <string name="dialog_title">Rate</string>
    <string name="toast">you rated the book!</string>
    <string name="back">you didn\'t rate the book</string>

    <!-- Strings related to change password-->
    <string name="ChangPW">Changing password</string>
    <string name="Confirm">Confirm</string>





</resources>
