<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_books" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="@string/nav_users" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/nav_logout" />


    </group>

    <item android:title="@string/nav_support" >
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_contact" />

        </menu>
    </item>

</menu>