<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChangPW"
        android:textSize="30dp"
        android:textColor="#FFF"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:id="@+id/changPwID"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/changPwID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/prompt_username"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:shadowColor="#000"
        android:paddingLeft="40dp"
        android:textSize="17dp"
        android:backgroundTint="#fff"
        android:id="@+id/UsernameID"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/UsernameID"
        android:layout_alignBottom="@+id/UsernameID"
        android:layout_alignLeft="@+id/UsernameID"
        android:layout_alignStart="@+id/UsernameID"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:textColor="#fff"
        android:textSize="17dp"
        android:id="@+id/textView" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/UsernameID"
        android:layout_alignStart="@+id/UsernameID"
        android:layout_alignTop="@+id/textView"
        android:layout_marginLeft="12dp"
        android:src="@drawable/user" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/UsernameID"
        android:layout_alignLeft="@+id/UsernameID"
        android:layout_alignRight="@+id/UsernameID"
        android:layout_alignStart="@+id/UsernameID"
        android:layout_below="@+id/UsernameID"
        android:layout_marginTop="20dp"
        android:shadowColor="#000"
        android:textColorHint="#fff"
        android:paddingLeft="40dp"
        android:hint="@string/prompt_password"
        android:textSize="17dp"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:backgroundTint="#fff"
        android:id="@+id/newPassID" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/newPassID"
        android:layout_marginTop="15dp"
        android:src="@drawable/password" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/UsernameID"
        android:layout_alignLeft="@+id/UsernameID"
        android:layout_alignRight="@+id/UsernameID"
        android:layout_alignStart="@+id/UsernameID"
        android:layout_below="@+id/newPassID"
        android:layout_marginTop="20dp"
        android:shadowColor="#000"
        android:textColorHint="#fff"
        android:paddingLeft="40dp"
        android:hint="@string/prompt_confirm"
        android:textSize="17dp"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:backgroundTint="#fff"
        android:id="@+id/newPassConfirmID" />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignTop="@+id/newPassConfirmID"
        android:layout_marginTop="15dp"
        android:src="@drawable/password" />


    <TextView
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/confirmPWbtnID"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Confirm"
        android:textColor="#fff"
        android:textSize="17dp" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@id/newPassConfirmID"
        android:layout_marginTop="20dp"
        android:src="@drawable/rect"
        android:id="@+id/confirmPWbtnID"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPWbtnID"
        android:layout_alignEnd="@+id/changPwID"
        android:layout_alignLeft="@+id/changPwID"
        android:layout_alignRight="@+id/changPwID"
        android:layout_alignStart="@+id/changPwID"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:id="@+id/ProgressBar"
        />

</RelativeLayout>